maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:3: error: illegal start of simple expression
  do(var ran=random3()
     ^RandomMouseMaze:7: error: ')' expected but '}' found.
} 
^