maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  do(var ran=random3()
     
  )while{!estSurBiscuit()}
    // Your code here 
}